--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 4,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 5,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "5e80ad1c-810a-45d4-b907-9e0b662d20e5",
+       "ref": "81b867cc-65ef-4502-81ec-34bf6a8a2841",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 6,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 7,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x17076ff8b90>"
+       "<viewx.html_engine.HTML at 0x20f4006e510>"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 8,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1299,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x17076ff8b90>"
+       "<viewx.html_engine.HTML at 0x20f4006e510>"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0;\">Dataset World</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0;\">Happiness</h1>\n",
     "\n",
-    "            <a href=\"dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1361,7 +1361,7 @@
     "            </a>\n",
     "        </div>\n",
     "\n",
-    "        <img src=\"gifs_paginas_web/estadisticas.gif\" class=\"img-dataset\"\n",
+    "        <img src=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/estadisticas.gif\" class=\"img-dataset\"\n",
     "            style=\"\n",
     "                width: 150px; \n",
     "                height: 150px;\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 9,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1394,10 +1394,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x17076ff8b90>"
+       "<viewx.html_engine.HTML at 0x20f4006e510>"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0;\">What happend</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0;\">with Colombia?</h1>\n",
     "\n",
-    "            <a href=\"colombia_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/colombia.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1433,7 +1433,7 @@
     "            </a>\n",
     "        </div>\n",
     "\n",
-    "        <img src=\"gifs_paginas_web/colombia.gif\" class=\"img-dataset\"\n",
+    "        <img src=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/colombia.gif\" class=\"img-dataset\"\n",
     "            style=\"\n",
     "                width: 150px; \n",
     "                height: 150px;\n",
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 10,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1467,10 +1467,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x17076ff8b90>"
+       "<viewx.html_engine.HTML at 0x20f4006e510>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1480,7 @@
     "    f\"\"\" \n",
     "    <div style=\"display: flex; align-items: right; justify-content: space-between;\">\n",
     "\n",
-    "        <img src=\"gifs_paginas_web/feliz.gif\" class=\"img-dataset\"\n",
+    "        <img src=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/feliz.gif\" class=\"img-dataset\"\n",
     "            style=\"\n",
     "                width: 150px; \n",
     "                height: 150px;\n",
@@ -1499,7 +1499,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">The Happiest</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">Countries</h1>\n",
     "\n",
-    "            <a href=\"dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 11,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1539,10 +1539,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x17076ff8b90>"
+       "<viewx.html_engine.HTML at 0x20f4006e510>"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,7 @@
     "    f\"\"\"\n",
     "    <div style=\"display: flex; align-items: right; justify-content: space-between;\">\n",
     "\n",
-    "        <img src=\"gifs_paginas_web/triste.gif\" class=\"img-dataset\"\n",
+    "        <img src=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/triste.gif\" class=\"img-dataset\"\n",
     "            style=\"\n",
     "                width: 150px; \n",
     "                height: 150px;\n",
@@ -1571,7 +1571,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">The Unhappiest</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">Countries</h1>\n",
     "\n",
-    "            <a href=\"dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 13,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
@@ -1605,6 +1605,13 @@
      "text": [
       "Mostrando HTML...\n",
       "Exportando HTML...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Feb/2026 13:48:41] \"GET /main_page.html HTTP/1.1\" 200 -\n"
      ]
     }
    ],
