--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "81b867cc-65ef-4502-81ec-34bf6a8a2841",
+       "ref": "3f7040fb-179f-41d6-a772-cd30a21e23b6",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4006e510>"
+       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1299,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4006e510>"
+       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1394,10 +1394,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4006e510>"
+       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1467,10 +1467,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4006e510>"
+       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1539,10 +1539,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4006e510>"
+       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
@@ -1605,13 +1605,6 @@
      "text": [
       "Mostrando HTML...\n",
       "Exportando HTML...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [20/Feb/2026 13:48:41] \"GET /main_page.html HTTP/1.1\" 200 -\n"
      ]
     }
    ],
