--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "3f7040fb-179f-41d6-a772-cd30a21e23b6",
+       "ref": "3588e722-c6a0-4395-b84b-e24882d26cc4",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
+       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1299,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
+       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1394,10 +1394,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
+       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1467,10 +1467,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
+       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1539,10 +1539,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f4015a5d0>"
+       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
