--- a/Notebooks/dataset_page.ipynb
+++ b/Notebooks/dataset_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "930bad7a-7c4c-40b6-8b61-38c2a8d6e0b9",
+       "ref": "42245e05-535b-415e-b040-0c5291813173",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "id": "1a86cfb1",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1272,7 @@
          "type": "float"
         }
        ],
-       "ref": "bb956552-34c6-48d3-a704-32ba09631a95",
+       "ref": "b388d7c1-5fd3-4809-a55f-1b18f008ff87",
        "rows": [
         [
          "count",
@@ -1610,7 +1610,7 @@
        "max                                   0.587000             3.482000  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1669,10 +1669,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2397c18e8b0>"
+       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1722,10 +1722,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2397c18e8b0>"
+       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "id": "8b514584",
    "metadata": {},
    "outputs": [
@@ -1752,10 +1752,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2397c18e8b0>"
+       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,7 +1794,7 @@
     "        justify-items: center;\n",
     "        margin-top: 10%;\">\n",
     "\n",
-    "        <a href=\"main_page.html\">\n",
+    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/main_page.html\">\n",
     "            <button class = \"button_dataset\" style=\"\n",
     "                background-color: {dataset_page.templates[6][2]};\n",
     "                color: white;\n",
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
