--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "3588e722-c6a0-4395-b84b-e24882d26cc4",
+       "ref": "7dc58718-67c7-4fc8-8484-45fe7a0da1fe",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
+       "<viewx.html_engine.HTML at 0x20f40536520>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1299,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
+       "<viewx.html_engine.HTML at 0x20f40536520>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0;\">Dataset World</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0;\">Happiness</h1>\n",
     "\n",
-    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1394,10 +1394,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
+       "<viewx.html_engine.HTML at 0x20f40536520>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0;\">What happend</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0;\">with Colombia?</h1>\n",
     "\n",
-    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/colombia.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/colombia.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1467,10 +1467,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
+       "<viewx.html_engine.HTML at 0x20f40536520>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">The Happiest</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">Countries</h1>\n",
     "\n",
-    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1539,10 +1539,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f3fff2ad0>"
+       "<viewx.html_engine.HTML at 0x20f40536520>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">The Unhappiest</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0; text-align: right;\">Countries</h1>\n",
     "\n",
-    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/dataset_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
