--- a/Notebooks/dataset_page.ipynb
+++ b/Notebooks/dataset_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "42245e05-535b-415e-b040-0c5291813173",
+       "ref": "3a4e8d74-b4db-4427-82f4-a3d66e9e20aa",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "1a86cfb1",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1272,7 @@
          "type": "float"
         }
        ],
-       "ref": "b388d7c1-5fd3-4809-a55f-1b18f008ff87",
+       "ref": "aeb2153f-46c0-4959-a5d1-13159791c101",
        "rows": [
         [
          "count",
@@ -1610,7 +1610,7 @@
        "max                                   0.587000             3.482000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1669,10 +1669,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
+       "<viewx.html_engine.HTML at 0x2175e1e1bd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1722,10 +1722,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
+       "<viewx.html_engine.HTML at 0x2175e1e1bd0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "8b514584",
    "metadata": {},
    "outputs": [
@@ -1752,10 +1752,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x2175e1c3b60>"
+       "<viewx.html_engine.HTML at 0x2175e1e1bd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,7 +1794,7 @@
     "        justify-items: center;\n",
     "        margin-top: 10%;\">\n",
     "\n",
-    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/main_page.html\">\n",
+    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/main_page.html\">\n",
     "            <button class = \"button_dataset\" style=\"\n",
     "                background-color: {dataset_page.templates[6][2]};\n",
     "                color: white;\n",
@@ -1809,7 +1809,7 @@
     "                Home\n",
     "            </button>\n",
     "        </a>\n",
-    "        <a href=\"world_page.html\">\n",
+    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/world_page.html\">\n",
     "            <button class = \"button_dataset\" style=\"\n",
     "                background-color: {dataset_page.templates[6][2]};\n",
     "                color: white;\n",
@@ -1824,7 +1824,7 @@
     "                World\n",
     "            </button>\n",
     "        </a>\n",
-    "        <a href=\"continent_page.html\">\n",
+    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/continent_page.html\">\n",
     "            <button class = \"button_dataset\" style=\"\n",
     "                background-color: {dataset_page.templates[6][2]};\n",
     "                color: white;\n",
@@ -1839,7 +1839,7 @@
     "                Continents\n",
     "            </button>\n",
     "        </a>\n",
-    "        <a href=\"countries_page.html\">\n",
+    "        <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/countries_page.html\">\n",
     "            <button class = \"button_dataset\" style=\"\n",
     "                background-color: {dataset_page.templates[6][2]};\n",
     "                color: white;\n",
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
