--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "7dc58718-67c7-4fc8-8484-45fe7a0da1fe",
+       "ref": "459f055f-b6aa-4c5e-a5db-f79c2f0663f7",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1224,15 +1224,15 @@
     "    data=df,\n",
     "    title=\"World Happiness Report\",\n",
     "    template_color=6,\n",
-    "    num_divs=6,\n",
-    "    num_cols=2,\n",
+    "    num_divs=7,\n",
+    "    num_cols=3,\n",
     "    num_rows=3\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f40536520>"
+       "<viewx.html_engine.HTML at 0x117924769f0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,6 +1277,18 @@
     "                    \">\n",
     "                    World Happiness Report\n",
     "        </h1>\n",
+    "        <h1 class = \"title\" style = \"\n",
+    "                    text-align: center; \n",
+    "                    font-size: 45px;\n",
+    "                    \">\n",
+    "                    Emmanuel Ascendra & Dawin Jimenez\n",
+    "        </h1>\n",
+    "        <h1 class = \"title\" style = \"\n",
+    "                    text-align: center; \n",
+    "                    font-size: 20px;\n",
+    "                    \">\n",
+    "                    Intro a la Ciencia de los Datos\n",
+    "        </h1>\n",
     "    </div>\n",
     "    \"\"\",\n",
     "    slot_grid=(\"div1\", 1, 1, 1, 2)\n",
@@ -1285,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1311,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f40536520>"
+       "<viewx.html_engine.HTML at 0x117924769f0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1394,10 +1406,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f40536520>"
+       "<viewx.html_engine.HTML at 0x117924769f0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1428,7 @@
     "            <h1 style=\"font-size: 40px; margin: 0;\">What happend</h1>\n",
     "            <h1 style=\"font-size: 40px; margin: 0;\">with Colombia?</h1>\n",
     "\n",
-    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/colombia.html\">\n",
+    "            <a href=\"https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/colombia_page.html\">\n",
     "                <button class = \"button_dataset\" style=\"\n",
     "                    background-color: {main_page.templates[6][2]};\n",
     "                    color: white;\n",
@@ -1453,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1467,10 +1479,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f40536520>"
+       "<viewx.html_engine.HTML at 0x117924769f0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1539,10 +1551,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x20f40536520>"
+       "<viewx.html_engine.HTML at 0x117924769f0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1607,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
+   "id": "55c73659",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cargando Texto...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<viewx.html_engine.HTML at 0x117924769f0>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_page.add_text(\n",
+    "    content= f\"\"\"\n",
+    "    <div class=\"news-section\">\n",
+    "        <h2 class=\"news-title\">📰 Noticias sobre Felicidad en Colombia</h2>\n",
+    "        \n",
+    "        <div class=\"news-grid\">\n",
+    "            <!-- Noticia 1: Ranking de felicidad 2026 -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://www.eje21.com.co/2025/03/felicidad-en-colombia/\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/2D6A4F/ffffff?text=Felicidad+Colombia\" \n",
+    "                             alt=\"Felicidad en Colombia\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">Eje21</span>\n",
+    "                        <h3 class=\"news-headline\">Colombia ocupa el puesto 61 en ranking mundial de felicidad</h3>\n",
+    "                        <p class=\"news-excerpt\">El país continúa su tendencia descendente: en 2018 estaba en el puesto 37, en 2023 cayó al 72 y ahora se ubica en el 61. Costa Rica y México lideran la región.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 9 febrero 2026</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "\n",
+    "            <!-- Noticia 2: Prosperidad económica -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://www.elcolombiano.com/amp/negocios/ranking-prosperidad-colombia-mitad-baja-america-latina-2025-NO33682359\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/1B4332/ffffff?text=Prosperidad+Económica\" \n",
+    "                             alt=\"Prosperidad económica\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">El Colombiano</span>\n",
+    "                        <h3 class=\"news-headline\">Colombia se desploma en ranking de prosperidad económica</h3>\n",
+    "                        <p class=\"news-excerpt\">El país ocupa el puesto 16 en América Latina con 25.87 puntos. Chile lidera la región con 43.19 puntos. La informalidad laboral (55-58%) y la inseguridad explican el rezago.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 17 febrero 2026</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "\n",
+    "            <!-- Noticia 3: Calidad de vida 2026 -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://www.lateja.cr/internacionales/estos-son-los-mejores-paises-de-america-latina/5MLCCVUW5RGLLEXZ5IJO6LNOMY/story/\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/2D6A4F/ffffff?text=Calidad+de+Vida\" \n",
+    "                             alt=\"Calidad de vida\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">La Teja</span>\n",
+    "                        <h3 class=\"news-headline\">Colombia en el puesto 8 de calidad de vida en Latinoamérica</h3>\n",
+    "                        <p class=\"news-excerpt\">Uruguay lidera la región, seguido por Costa Rica y Ecuador. El ranking evalúa poder adquisitivo, seguridad, salud y costo de vida.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 18 enero 2026</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "\n",
+    "            <!-- Noticia 4: Ranking IA mejores países -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://colombia.as.com/actualidad/le-pedimos-a-la-ia-que-haga-un-ranking-de-los-mejores-paises-para-vivir-en-latinoamerica-este-es-el-puesto-de-colombia-f202601-n/\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/1B4332/ffffff?text=Ranking+IA\" \n",
+    "                             alt=\"Ranking IA\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">AS Colombia</span>\n",
+    "                        <h3 class=\"news-headline\">Según IA, Colombia es el séptimo mejor país para vivir en Latinoamérica</h3>\n",
+    "                        <p class=\"news-excerpt\">Uruguay, Chile y Costa Rica lideran el ranking. Colombia destaca en potencial económico pero enfrenta retos en inseguridad e incertidumbre política.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 25 enero 2026</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "\n",
+    "            <!-- Noticia 5: Comparación con Ecuador -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://versus.com/en/colombia-vs-ecuador/world-happiness\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/2D6A4F/ffffff?text=Colombia+vs+Ecuador\" \n",
+    "                             alt=\"Colombia vs Ecuador\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">Versus</span>\n",
+    "                        <h3 class=\"news-headline\">Colombia vs Ecuador: ¿quién es más feliz?</h3>\n",
+    "                        <p class=\"news-excerpt\">Colombia obtiene 5.7 puntos frente a 5.6 de Ecuador en el Informe Mundial de Felicidad 2026. El análisis incluye bienestar, apoyo social e ingresos.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 2026</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "\n",
+    "            <!-- Noticia 6: Pobres pero felices (artículo de contexto) -->\n",
+    "            <div class=\"news-card\">\n",
+    "                <a href=\"https://www.eje21.com.co/2016/02/pobres-pero-felices/\" target=\"_blank\" class=\"news-link\">\n",
+    "                    <div class=\"news-image-container\">\n",
+    "                        <img src=\"https://via.placeholder.com/300x160/1B4332/ffffff?text=Pobres+pero+Felices\" \n",
+    "                             alt=\"Pobres pero felices\" \n",
+    "                             class=\"news-image\">\n",
+    "                    </div>\n",
+    "                    <div class=\"news-content\">\n",
+    "                        <span class=\"news-source\">Eje21 (Análisis)</span>\n",
+    "                        <h3 class=\"news-headline\">Pobres pero felices: la paradoja colombiana</h3>\n",
+    "                        <p class=\"news-excerpt\">A pesar de la devaluación y el aumento de la pobreza, los colombianos se declaran felices. Un análisis sobre el talante nacional y la resiliencia.</p>\n",
+    "                        <div class=\"news-meta\">\n",
+    "                            <span class=\"news-date\">📅 5 febrero 2016</span>\n",
+    "                            <span class=\"news-read-more\">Leer más →</span>\n",
+    "                        </div>\n",
+    "                    </div>\n",
+    "                </a>\n",
+    "            </div>\n",
+    "        </div>\n",
+    "    </div>\n",
+    "\n",
+    "    <style>\n",
+    "    .news-section {{\n",
+    "        background: {main_page.templates[6][0]};\n",
+    "        padding: 20px;\n",
+    "        border-radius: 12px;\n",
+    "        margin: 10px 0;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "    }}\n",
+    "\n",
+    "    .news-title {{\n",
+    "        color: {main_page.templates[6][3]};\n",
+    "        font-size: 24px;\n",
+    "        margin-bottom: 20px;\n",
+    "        padding-bottom: 10px;\n",
+    "        border-bottom: 2px solid {main_page.templates[6][2]};\n",
+    "    }}\n",
+    "\n",
+    "    .news-grid {{\n",
+    "        display: grid;\n",
+    "        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));\n",
+    "        gap: 20px;\n",
+    "    }}\n",
+    "\n",
+    "    .news-card {{\n",
+    "        background: white;\n",
+    "        border-radius: 10px;\n",
+    "        overflow: hidden;\n",
+    "        box-shadow: 0 2px 8px rgba(0,0,0,0.1);\n",
+    "        transition: transform 0.2s, box-shadow 0.2s;\n",
+    "        border: 1px solid {main_page.templates[6][2]}22;\n",
+    "    }}\n",
+    "\n",
+    "    .news-card:hover {{\n",
+    "        transform: translateY(-3px);\n",
+    "        box-shadow: 0 6px 16px rgba(0,0,0,0.15);\n",
+    "    }}\n",
+    "\n",
+    "    .news-link {{\n",
+    "        text-decoration: none;\n",
+    "        color: inherit;\n",
+    "        display: block;\n",
+    "    }}\n",
+    "\n",
+    "    .news-image-container {{\n",
+    "        width: 100%;\n",
+    "        height: 160px;\n",
+    "        overflow: hidden;\n",
+    "        background: {main_page.templates[6][2]};\n",
+    "    }}\n",
+    "\n",
+    "    .news-image {{\n",
+    "        width: 100%;\n",
+    "        height: 100%;\n",
+    "        object-fit: cover;\n",
+    "        transition: transform 0.3s;\n",
+    "    }}\n",
+    "\n",
+    "    .news-card:hover .news-image {{\n",
+    "        transform: scale(1.05);\n",
+    "    }}\n",
+    "\n",
+    "    .news-content {{\n",
+    "        padding: 15px;\n",
+    "    }}\n",
+    "\n",
+    "    .news-source {{\n",
+    "        display: inline-block;\n",
+    "        background: {main_page.templates[6][2]};\n",
+    "        color: white;\n",
+    "        font-size: 12px;\n",
+    "        padding: 3px 8px;\n",
+    "        border-radius: 4px;\n",
+    "        margin-bottom: 8px;\n",
+    "        font-weight: bold;\n",
+    "    }}\n",
+    "\n",
+    "    .news-headline {{\n",
+    "        color: {main_page.templates[6][3]};\n",
+    "        font-size: 16px;\n",
+    "        margin: 8px 0;\n",
+    "        line-height: 1.4;\n",
+    "        font-weight: bold;\n",
+    "    }}\n",
+    "\n",
+    "    .news-excerpt {{\n",
+    "        color: #666;\n",
+    "        font-size: 14px;\n",
+    "        line-height: 1.5;\n",
+    "        margin: 8px 0;\n",
+    "        display: -webkit-box;\n",
+    "        -webkit-line-clamp: 3;\n",
+    "        -webkit-box-orient: vertical;\n",
+    "        overflow: hidden;\n",
+    "    }}\n",
+    "\n",
+    "    .news-meta {{\n",
+    "        display: flex;\n",
+    "        justify-content: space-between;\n",
+    "        align-items: center;\n",
+    "        margin-top: 10px;\n",
+    "        padding-top: 8px;\n",
+    "        border-top: 1px solid #eee;\n",
+    "        font-size: 12px;\n",
+    "    }}\n",
+    "\n",
+    "    .news-date {{\n",
+    "        color: #888;\n",
+    "    }}\n",
+    "\n",
+    "    .news-read-more {{\n",
+    "        color: {main_page.templates[6][2]};\n",
+    "        font-weight: bold;\n",
+    "    }}\n",
+    "\n",
+    "    /* Responsive */\n",
+    "    @media (max-width: 768px) {{\n",
+    "        .news-grid {{\n",
+    "            grid-template-columns: 1fr;\n",
+    "        }}\n",
+    "        \n",
+    "        .news-title {{\n",
+    "            font-size: 20px;\n",
+    "        }}\n",
+    "    }}\n",
+    "    </style>\n",
+    "    \"\"\",\n",
+    "    slot_grid=(\"div7\", 1, 3, 3, 1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
