Actualizar márgenes en main_page.html y ajustar conteos de ejecución en main_page.ipynb

--- a/Notebooks/main_page.ipynb
+++ b/Notebooks/main_page.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "id": "9278abf0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "id": "94e43316",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
          "type": "float"
         }
        ],
-       "ref": "459f055f-b6aa-4c5e-a5db-f79c2f0663f7",
+       "ref": "e4941f9d-0e1e-4691-bfe3-bbd4f9146d72",
        "rows": [
         [
          "0",
@@ -1186,7 +1186,7 @@
        "[1969 rows x 13 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "2d1a2f7a",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "eeea55b5",
    "metadata": {},
    "outputs": [
@@ -1246,10 +1246,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "id": "75e8e244",
    "metadata": {},
    "outputs": [
@@ -1311,10 +1311,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "id": "a600fd6f",
    "metadata": {},
    "outputs": [
@@ -1406,10 +1406,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "id": "75b774c7",
    "metadata": {},
    "outputs": [
@@ -1479,10 +1479,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
     "                margin-right: 10%;\n",
     "                margin-left: 10%;\n",
     "                margin-top: 5%;\n",
-    "                margin-bottom: 5%;  \n",
+    "                margin-bottom: 5%;\n",
     "                transition: all 0.3s ease;\">\n",
     "\n",
     "        <div style=\"\n",
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "4e174381",
    "metadata": {},
    "outputs": [
@@ -1551,10 +1551,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "id": "55c73659",
    "metadata": {},
    "outputs": [
@@ -1621,10 +1621,10 @@
     {
      "data": {
       "text/plain": [
-       "<viewx.html_engine.HTML at 0x117924769f0>"
+       "<viewx.html_engine.HTML at 0x11792457680>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "id": "9a4312ef",
    "metadata": {},
    "outputs": [
